@@ -2,6 +2,8 @@
  - fix: imported polygon filters did not immediately show up in
    Quick View
  - fix: polygon filters were not stored correctly in log mode
+ - fix: several issues related to contour plots, contour spacing,
+   and log-scales
 2.0.0b10
  - fix: fluorescence label for y axis not updated with custom value
  - fix: fluorescence label of colorbar not updated with custom value 
